--- a/package.json
+++ b/package.json
@@ -5,17 +5,28 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
+    "concurrently": "^8.2.0",
+    "D": "^1.0.0",
+    "date-fns": "^2.30.0",
     "install": "^0.13.0",
+    "jest": "^27.5.1",
     "npm": "^9.7.1",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-papaparse": "^4.1.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.63.3",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
